# OpenCV_Exercises

./: .gitignore  README.md
1/: CMakeLists.txt  drawing.cpp  editing_image.cpp  hello_opencv.cpp  video_read.cpp
